Common/src/main/java/org/example/error/InvalidFormException.java
package org.example.error;

import java.io.IOException;

/**
 * Класс исключения для неверно заполненной формы
 */
public class InvalidFormException extends IOException {
}
